--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <a class="header__nav-link">Download</a>
         </div>
 
-     </div>
+    </div>
     </div>
 
     <div class="intro">
@@ -41,7 +41,9 @@
         </div>
     </div>
     
-    <div class="info container">
+    <div class="opportunities">
+        <div class="container">
+    <div class="info">
             <div class="info__item">
                         <a class="info__item-image">
                                 <img src="./img/Layer 48.png">
@@ -102,6 +104,8 @@
                         eu leo. Donec ullamcorper nulla non metus auctor 
                 </div>
             </div>
+        </div>
+    </div>
     </div>
     
 
@@ -121,7 +125,7 @@
 
     <div class="specialists">
         <div class="container">
-            <div class="description container">
+            <div class="description">
                 <div class="description__item">
                     <div class="description__item-foto description__item-foto_ceo"></div>
                     <div class="description__item-name">Ruth Woods</div> 
