--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
 
 <body>
  
-    
     <div class="header">
         <div class="header__container">
             <a href="#">
@@ -32,7 +31,14 @@
            <div class="header__menu-open">
                 <i class="fa fa-bars"></i>
             </div>
-            
+            <!--Adaptive menu-->
+            <div class="header__adapt-nav" data-isOpen='0'>
+                <a href="#" class="header__adapt-nav-link">features</a>
+                <a href="#" class="header__adapt-nav-link">works</a>
+                <a href="#" class="header__adapt-nav-link">our team</a>
+                <a href="#" class="header__adapt-nav-link">testimonials</a>
+                <a href="#" class="header__adapt-nav-link">download</a>
+            </div>
         </div>
     </div>
 
@@ -111,17 +117,54 @@
     </div>
 
     <div class="project">
-           <div class="project__item"></div>
-           <div class="project__item"></div>
            <div class="project__item">
-               <div class="project__item-name">PROJECT NAME</div>
-               <div class="project__item-interface">User Interface Design</div>
+                <div class="project__item-about">
+                    <div class="project__item-name">PROJECT NAME</div>
+                    <div class="project__item-interface">User Interface Design</div>
+                </div>
            </div>
-           <div class="project__item"></div>
-           <div class="project__item"></div>
-           <div class="project__item"></div>
-           <div class="project__item"></div>
-           <div class="project__item"></div>
+           <div class="project__item">
+                <div class="project__item-about">
+                    <div class="project__item-name">PROJECT NAME</div>
+                    <div class="project__item-interface">User Interface Design</div>
+                </div>
+           </div>
+           <div class="project__item">
+                <div class="project__item-about">
+                    <div class="project__item-name">PROJECT NAME</div>
+                    <div class="project__item-interface">User Interface Design</div>
+                </div>
+           </div>
+           <div class="project__item">
+                <div class="project__item-about">
+                    <div class="project__item-name">PROJECT NAME</div>
+                    <div class="project__item-interface">User Interface Design</div>
+                </div>
+           </div>
+           <div class="project__item">
+                <div class="project__item-about">
+                    <div class="project__item-name">PROJECT NAME</div>
+                    <div class="project__item-interface">User Interface Design</div>
+                </div>
+           </div>
+           <div class="project__item">
+                <div class="project__item-about">
+                    <div class="project__item-name">PROJECT NAME</div>
+                    <div class="project__item-interface">User Interface Design</div>
+                </div>
+           </div>
+           <div class="project__item">
+                <div class="project__item-about">
+                    <div class="project__item-name">PROJECT NAME</div>
+                    <div class="project__item-interface">User Interface Design</div>
+                </div>
+           </div>
+           <div class="project__item">
+                <div class="project__item-about">
+                    <div class="project__item-name">PROJECT NAME</div>
+                    <div class="project__item-interface">User Interface Design</div>
+                </div>
+           </div>
     </div>
 
     <div class="specialists">
@@ -287,6 +330,8 @@
             </div>
         </div>
     </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+   <script src="./js/main.js"></script>
 </body>
 
 </html>
