--- a/index.html
+++ b/index.html
@@ -271,17 +271,21 @@
     </div>
 
     <div class="slide">
-        <div class="slide__item">
+        <div class="slide__foto">
         </div>
-        <div class="slide__item">
-                <div class="slide__item-name">
+        <div class="slide__info">
+          <div class="slide__item-name">
             <div class="slide__tittle">
                 “Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Donec sed odio dui. Aenean eu leo quam...”
             </div>
             <div class="slide__subtittle">
                 Susan Sims, Interaction Designer at XYZ
-         </div>
-        </div>
+            </div>
+            <div class="slide__dots">
+                
+                
+            </div>
+          </div>
         </div>
     </div>
 
