--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
             <div class="slide__subtittle">
                 Susan Sims, Interaction Designer at XYZ
             </div>
-            <div class="slider__dots">
+            <div class="slide__dots">
                 
                 
             </div>
