--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <div class="info container">
             <div class="info__item">
                 <a href="#" class="info__item-image">
-                    <img src="./img/Layer 48.png" alt="">
+                    <img src="./img/easily_customise.png" alt="">
                 </a>
                 <div class="info__item-title">Easily customize
                 </div>
@@ -67,7 +67,7 @@
             </div>
             <div class="info__item">
                 <a href="#" class="info__item-image">
-                    <img src="./img/Layer 44.png" alt="">
+                    <img src="./img/responsive_ready.png" alt="">
                 </a>
                 <div class="info__item-title">Responsive ready</div>
                 <div class="info__item-subtitle">Cras justo odio, dapibus ac facilisis in, egestas eget
@@ -77,7 +77,7 @@
             </div>
             <div class="info__item">
                 <a href="#" class="info__item-image">
-                    <img src="./img/Layer 47.png" alt="">
+                    <img src="./img/modern_design.png" alt="">
                 </a>
                 <div class="info__item-title">Modern design</div>
                 <div class="info__item-subtitle">Cras justo odio, dapibus ac facilisis in, egestas eget
@@ -87,7 +87,7 @@
             </div>
             <div class="info__item">
                 <a href="#" class="info__item-image">
-                    <img src="./img/Layer 46.png" alt="">
+                    <img src="./img/clean_code.png" alt="">
                 </a>
                 <div class="info__item-title">Clean code</div>
                 <div class="info__item-subtitle">Cras justo odio, dapibus ac facilisis in, egestas eget
@@ -97,7 +97,7 @@
             </div>
             <div class="info__item">
                 <a href="#" class="info__item-image">
-                    <img src="./img/Layer 43.png" alt="">
+                    <img src="./img/ready_to_ship.png" alt="">
                 </a>
                 <div class="info__item-title">Ready to ship</div>
                 <div class="info__item-subtitle">Cras justo odio, dapibus ac facilisis in, egestas eget
@@ -107,7 +107,7 @@
             </div>
             <div class="info__item">
                 <a href="#" class="info__item-image">
-                    <img src="./img/Layer 45.png" alt="">
+                    <img src="./img/download_for_free.png" alt="">
                 </a>
                 <div class="info__item-title">Download for free</div>
                 <div class="info__item-subtitle">Cras justo odio, dapibus ac facilisis in, egestas eget
@@ -181,13 +181,13 @@
                         varius blandit sit amet non magna. Nullam quis risus eget urna mollis ornare vel eu leo.</div>
                     <div class="description__item-icon">
                         <div class="description__item-icon_facebook">
-                            <a href="#"><img src="img/Shape 6.png" alt=""></a>
+                            <a href="#"><img src="img/facebook.png" alt=""></a>
                         </div>
                         <div class="description__item-icon_twitter">
-                            <a href="#"><img src="img/Shape 3.png" alt=""></a>
+                            <a href="#"><img src="img/twitter.png" alt=""></a>
                         </div>
                         <div class="description__item-icon_linkedin">
-                            <a href="#"><img src="img/Shape 11.png" alt=""></a>
+                            <a href="#"><img src="img/linkedin.png" alt=""></a>
                         </div>
                     </div>
                 </div>
@@ -200,13 +200,13 @@
                         varius blandit sit amet non magna. Nullam quis risus eget urna mollis ornare vel eu leo.</div>
                     <div class="description__item-icon">
                         <div class="description__item-icon_facebook">
-                            <a href="#"><img src="img/Shape 6.png" alt=""></a>
+                            <a href="#"><img src="img/facebook.png" alt=""></a>
                         </div>
                         <div class="description__item-icon_twitter">
-                            <a href="#"><img src="img/Shape 3.png" alt=""></a>
+                            <a href="#"><img src="img/twitter.png" alt=""></a>
                         </div>
                         <div class="description__item-icon_linkedin">
-                            <a href="#"><img src="img/Shape 11.png" alt=""></a>
+                            <a href="#"><img src="img/linkedin.png" alt=""></a>
                         </div>
                     </div>
                 </div>
@@ -219,13 +219,13 @@
                         varius blandit sit amet non magna. Nullam quis risus eget urna mollis ornare vel eu leo.</div>
                     <div class="description__item-icon">
                         <div class="description__item-icon_facebook">
-                            <a href="#"><img src="img/Shape 6.png" alt=""></a>
+                            <a href="#"><img src="img/facebook.png" alt=""></a>
                         </div>
                         <div class="description__item-icon_twitter">
-                            <a href="#"><img src="img/Shape 3.png" alt=""></a>
+                            <a href="#"><img src="img/twitter.png" alt=""></a>
                         </div>
                         <div class="description__item-icon_linkedin">
-                            <a href="#"><img src="img/Shape 11.png" alt=""></a>
+                            <a href="#"><img src="img/linkedin.png" alt=""></a>
                         </div>
                     </div>
                 </div>
@@ -238,13 +238,13 @@
                         varius blandit sit amet non magna. Nullam quis risus eget urna mollis ornare vel eu leo.</div>
                     <div class="description__item-icon">
                         <div class="description__item-icon_facebook">
-                            <a href="#"><img src="img/Shape 6.png" alt=""></a>
+                            <a href="#"><img src="img/facebook.png" alt=""></a>
                         </div>
                         <div class="description__item-icon_twitter">
-                            <a href="#"><img src="img/Shape 3.png" alt=""></a>
+                            <a href="#"><img src="img/twitter.png" alt=""></a>
                         </div>
                         <div class="description__item-icon_linkedin">
-                            <a href="#"> <img src="img/Shape 11.png" alt=""></a>
+                            <a href="#"> <img src="img/linkedin.png" alt=""></a>
                         </div>
                     </div>
                 </div>
@@ -291,13 +291,13 @@
                     <div class="footer__item-title">SHARE WITH LOVE</div>
                     <div class="footer__item-icon">
                         <div class="footer__item-icon_facebook">
-                            <a href="#"><img src="img/Shape 6.png" alt=""></a>
+                            <a href="#"><img src="img/facebook.png" alt=""></a>
                         </div>
                         <div class="footer__item-icon_twitter">
-                            <a href="#"><img src="img/Shape 3.png" alt=""></a>
+                            <a href="#"><img src="img/twitter.png" alt=""></a>
                         </div>
                         <div class="footer__item-icon_linkedin">
-                            <a href="#"><img src="img/Shape 11.png" alt=""></a>
+                            <a href="#"><img src="img/linkedin.png" alt=""></a>
                         </div>
                     </div>
                 </div>
